# konfigure

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  alembic.ini  docker-compose.yaml  mkdocs.yml  pyproject.toml
.docker/images/prod/: Dockerfile
app/: app.py  asgi.py  models.py  settings.py
app/database/: mixins.py  orm.py  session.py  types.py
app/schemas/: base.py  configuration.py  metadata.py  types.py
migrations/: env.py
migrations/versions/: 8d39b224783b_extension_setup.py  920f6cc7cc03_initial_models.py
