[tool.poetry]
name = "schema-registry"
version = "0.1.0"
description = ""
authors = ["Radzim Kowalow <radzim.kowalow@performance-media.pl>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
asyncpg = "^0.25.0"
SQLAlchemy = "^1.4.35"
alembic = "^1.7.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

