[tool.poetry]
name = "konfigure"
version = "0.1.0"
description = "Configuration & Schema Registry Service"
readme = "README.md"
authors = ["Radzim Kowalow <radzim_ko@wp.pl>"]

[tool.poetry.dependencies]
python = "^3.9"
jsonschema = "^4.17.1"
fastapi = "^0.88.0"
asyncpg = "^0.27.0"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.44"}
uvloop = "^0.17.0"
uvicorn = "^0.20.0"
orjson = "^3.8.2"
pendulum = "^2.1.2"
cryptography = "^38.0.4"
alembic = "^1.8.1"


[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mypy = "^0.991"
isort = "^5.10.1"
flake8 = "^6.0.0"
pytest-asyncio = "^0.20.2"
black = "^22.10.0"
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"
mkdocs-autorefs = "^0.4.1"
mkdocs-gen-files = "^0.4.0"
mkdocstrings-python = "^0.8.2"
greenlet = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--cov=./app"
testpaths = [
   "./tests"
]
asyncio_mode = "auto"

[tool.mypy]
python_version = 3.9
ignore_missing_imports = true
no_site_packages = true

[tool.isort]
profile = "black"